--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "dependencies": {
         "any-promise": "1.3.0"
     },
+    "scripts": {
+        "lint": "eslint ."
+    },
+    "devDependencies": {
+        "@futagoza/eslint-config-ignore": "12.0.0",
+        "@futagoza/eslint-config-node": "12.0.0",
+        "eslint": "6.7.2"
+    },
     "engines": {
         "node": ">= 10"
     }
