--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {
         "@futagoza/eslint-config-ignore": "12.0.0",
         "@futagoza/eslint-config-node": "12.0.0",
+        "@types/node": "10",
         "eslint": "6.7.2"
     },
     "engines": {
