--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
         "any-promise": "1.3.0"
     },
     "scripts": {
-        "lint": "eslint ."
+        "lint": "eslint --ext .js,.ts ."
     },
     "devDependencies": {
-        "@futagoza/eslint-config-ignore": "12.0.0",
-        "@futagoza/eslint-config-node": "12.0.0",
+        "@futagoza/eslint-config": "12.0.0",
+        "@futagoza/tsconfig": "1.0.0",
         "@types/node": "10",
-        "eslint": "6.7.2"
+        "eslint": "6.7.2",
+        "rimraf": "3.0.0",
+        "typescript": "3.7.3"
     },
     "engines": {
         "node": ">= 10"
