--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "repository": "https://github.com/futagoza/cm/tree/master/packages/@futagoza/child-process",
     "license": "MIT",
     "author": "Futago-za Ryuu <futagoza.ryuu@gmail.com>",
-    "main": "index.js",
-    "dependencies": {
-        "any-promise": "1.3.0"
-    },
+    "main": "out/index.js",
+    "files": [
+        "out",
+        "src"
+    ],
     "scripts": {
         "lint": "eslint --ext .js,.ts ."
     },
