--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@futagoza/child-process",
     "version": "1.0.0",
-    "description": "A set of Promise-based utils around child_process.spawn",
+    "description": "A set of Promise-based methods around child_process.spawn",
     "keywords": [
         "child_process",
         "spawn",
